@@ -309,6 +309,7 @@ Version 1.11.0-svn:
    * Added: Helper code to make it easier to write enumerate stream operators.
    * Added: UNREACHABLE_CODE macro.
    * Added: TELEPORT animation macros usable by any units
+   * Added: CMake option ENABLE_SHARED_LIBRARIES.
 
 Version 1.10.0:
  * Campaigns:
